--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-scripts": "^5.0.1",
     "react-tilt": "^1.0.2",
     "tachyons": "^4.12.0",
-    "web-vitals": "^2.1.4",
-    "type": "module"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
